--- a/styles/index.css
+++ b/styles/index.css
@@ -14,12 +14,6 @@ body {
   margin: 0;
 }
 
-@media screen and (max-width: 640px) {
-  body {
-    grid-template-rows: 90vh 10vh;
-  }
-}
-
 .canvas {
   align-items: center;
   display: flex;
@@ -72,7 +66,7 @@ body {
 
 @media screen and (max-width: 640px) {
   body {
-    grid-template-rows: 72vh 18vh;
+    grid-template-rows: 71vh auto;
   }
 
   .canvas {
@@ -85,6 +79,10 @@ body {
   .controls::-webkit-scrollbar {
     display: none;
     width: 0 !important;
+  }
+
+  .control {
+    padding: 1rem 0;
   }
 
   .control .input {
