--- a/styles/index.css
+++ b/styles/index.css
@@ -72,10 +72,14 @@ body {
   .canvas {
     zoom: 0.5;
   }
+
   .controls {
+    display: grid;
+    grid-template-rows: 50% 50%;
     scrollbar-width: none;
     -ms-overflow-style: none;
   }
+
   .controls::-webkit-scrollbar {
     display: none;
     width: 0 !important;
