accomodate mobile device height with toolbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -86,11 +86,10 @@ body {
   .control {
     display: grid;
     grid-template-rows: 50% 50%;
-    padding: 1rem 0;
   }
 
   .control .input {
-    padding: 1rem 2rem;
+    padding: 0 2rem;
   }
 
   .control label {
