--- a/styles/index.css
+++ b/styles/index.css
@@ -31,15 +31,15 @@ body {
 
 .control {
   align-items: center;
+  border-right: 1px solid rgb(255 255 255 / 4%);
+  box-sizing: border-box;
   color: #a6d1ff87;
   display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 1fr 1fr;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 100;
+  grid-template-columns: 100%;
+  grid-template-rows: 1fr 1fr;
   justify-content: center;
-  box-sizing: border-box;
-  border-right: 1px solid rgb(255 255 255 / 4%);
   height: 100%;
   width: 100%;
 }
@@ -86,6 +86,7 @@ body {
   .control {
     display: grid;
     grid-template-rows: 50% 50%;
+    padding: 0 1rem;
   }
 
   .control .input {
