--- a/styles/index.css
+++ b/styles/index.css
@@ -86,7 +86,7 @@ body {
   .control {
     display: grid;
     grid-template-rows: 50% 50%;
-    padding: 0 1rem;
+    min-width: 12rem;
   }
 
   .control .input {
@@ -95,6 +95,12 @@ body {
 
   .control label {
     height: 100%;
+  }
+
+  .control-radios input + label {
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
   }
 }
 
